--- a/src/static/scss/mixins/_reset.scss
+++ b/src/static/scss/mixins/_reset.scss
@@ -90,7 +90,8 @@
 	input[type=email],
 	input[type=tel],
 	input[type=url],
-	input[type=search] {
+	input[type=search],
+  textarea  {
 	  appearance: none;
 	  -moz-appearance: none;
 	  -webkit-appearance: none;
