--- a/src/static/scss/layout.scss
+++ b/src/static/scss/layout.scss
@@ -84,15 +84,7 @@ body {
   }
 
   .section-image {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    min-width: 100.1%;
-    min-height: 100.1%;
-    max-width: none;
-    z-index: 2;
-    @include transform(translate3d(-50%, -50%, 0));
-    @include backface-visibility(hidden);
+    @include centrizeImage($zIndex: 2);
   }
 
   .section-video {
