--- a/src/apps/main/static/main/scss/index.scss
+++ b/src/apps/main/static/main/scss/index.scss
@@ -1,7 +1,24 @@
 @import "mixins";
 
+#main-slider {
+  .slider {
+    &:before {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 6;
+      background: rgba(0,0,0,0.4);
+    }
+  }
 
-#content {
-  background-color: #F2F2F2;
+  .overlay {
+    .title {
+      color: $white;
+      text-align: center;
+    }
+  }
 }
 
