--- a/src/static/scss/_mixins.scss
+++ b/src/static/scss/_mixins.scss
@@ -73,8 +73,8 @@
 	position: absolute;
 	left: 50%;
 	top: 50%;
-	min-width: 100.2%;    // учет погрешности округления
-	min-height: 100.2%;
+	min-width: 100%;
+	min-height: 100%;
 	max-width: none;
 	z-index: #{$zIndex};
 	@include transform(translate(-50%, -50%));
