--- a/src/static/scss/custom_checkbox.scss
+++ b/src/static/scss/custom_checkbox.scss
@@ -35,7 +35,7 @@ input[type="checkbox"] {
       top: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0,0,0,0.2);
+      background-color: rgba(0, 0, 0, 0.2);
     }
   }
 }
