--- a/src/static/scss/mixins/_transition.scss
+++ b/src/static/scss/mixins/_transition.scss
@@ -1,10 +1,23 @@
-// Пример: @include transition(all 0.2s ease-in-out);
+@import "__lists";
+
+// @include transition(all 0.2s ease-in-out);
 @mixin transition($args...) {
-  -webkit-transition: $args;
-  -moz-transition: $args;
-  -ms-transition: $args;
-  -o-transition: $args;
-  transition: $args;
+  // Safari fix
+  $result: ();
+  @for $i from 1 through length($args) {
+    $item: nth($args, $i);
+    $property: nth($item, 1);
+    @if $property == transform {
+      $result: append($result, replace-nth($item, 1, -webkit-transform), 'comma');
+    }
+    $result: append($result, $item, 'comma');
+  }
+
+  -webkit-transition: $result;
+  -moz-transition: $result;
+  -ms-transition: $result;
+  -o-transition: $result;
+  transition: $result;
 }
 
 @mixin transition-property($args...) {
