--- a/src/apps_common/gallery/static/gallery/scss/gallery_popup.scss
+++ b/src/apps_common/gallery/static/gallery/scss/gallery_popup.scss
@@ -2,12 +2,15 @@
 
 // кнопка закрытия
 $close_btn_size: (
-    ($media768, 0px): 80px,
-    (0px, $media768): 30px,
+    ($media768, 0px): 60px,
+    (0px, $media768): 40px,
+);
+$close_btn_cross_size: (
+    ($media480, 0px): 50%,
+    (0px, $media480): 60%,
 );
 $close_btn_color: #F2F2F2;
 $close_btn_weight: 2px;
-
 
 #gallery-popup-overlay {
   position: fixed;
@@ -35,17 +38,24 @@ $close_btn_weight: 2px;
     right: 10px;
     z-index: 6;
     cursor: pointer;
+    background: rgba(0, 0, 0, 0.1);
+    @include opacity(0.5);
+    @include transition(opacity 0.2s);
     @include media_map(width, $close_btn_size);
     @include media_map(height, $close_btn_size);
+    @include media_interval(0, $media480) {
+      top: 5px;
+      right: 3px;
+    }
 
     &:before, &:after {
       content: '';
       position: absolute;
       left: 50%;
       top: 50%;
-      width: 60%;
       height: $close_btn_weight;
       background: $close_btn_color;
+      @include media_map(width, $close_btn_cross_size);
     }
     &:before {
       @include transform(translate3d(-50%, -50%, 0) rotate(45deg));
@@ -53,20 +63,53 @@ $close_btn_weight: 2px;
     &:after {
       @include transform(translate3d(-50%, -50%, 0) rotate(-45deg));
     }
+
+    &:hover {
+      @include opacity(1);
+    }
   }
 
   // слайдер
   .slider-root {
     .slider-slide {
-      width: 100%;
       height: 100%;
+      @include valign_after;
 
-      img {
+      .slider-item {
+        position: static;
         min-width: 0;
         min-height: 0;
         max-width: 100%;
         max-height: 100%;
+        vertical-align: middle;
+        @include transform(none);
       }
+
+      .video-item {
+        height: 100%;
+        @include valign_after;
+
+        iframe {
+          max-width: 100%;
+          max-height: 100%;
+          vertical-align: middle;
+        }
+      };
+    }
+
+    .slider-arrow {
+      height: 50%;
+      background: rgba(0, 0, 0, 0.1);
+      @include opacity(0.4);
+      @include transition(opacity 0.2s);
+
+      &:hover {
+        @include opacity(1);
+      }
+    }
+
+    .slider-navigation {
+      background: rgba(0, 0, 0, 0.1);
     }
   }
 }
