--- a/src/static/scss/slider/plugins/navigation.scss
+++ b/src/static/scss/slider/plugins/navigation.scss
@@ -1,8 +1,21 @@
 @import "mixins";
 
-$item_size: 16px;
-$dot_size: 10px;
-$item_gap: 4px;
+// размер области точек
+$area_size: 16px;
+
+// расстояние между областями
+$area_gap: (
+    ($media480, 0): 4px,
+    (0, $media480): 0,
+);
+
+// размер точек
+$dot_size: (
+    ($media480, 0): 10px,
+    (0, $media480): 8px,
+);
+
+// цвета
 $dot_color: rgba($white, 0.3);
 $dot_hover_color: rgba($white, 0.6);
 $dot_active_color: rgba($white, 1);
@@ -11,9 +24,10 @@ $dot_active_color: rgba($white, 1);
 // Navigation
 .slider-navigation {
   position: absolute;
+  padding: 10px;
   width: 100%;
   left: 0;
-  bottom: 10px;
+  bottom: 0;
   z-index: 9;
   text-align: center;
   @include valign_after;
@@ -22,14 +36,14 @@ $dot_active_color: rgba($white, 1);
   .slider-navigation-item {
     display: inline-block;
     position: relative;
-    width: $item_size;
-    height: $item_size;
-    margin-right: $item_gap;
+    width: $area_size;
+    height: $area_size;
     text-align: center;
     cursor: pointer;
     z-index: 1;
     @include no_fontsize;
     @include valign_after;
+    @include media_map(margin-right, $area_gap);
     &:nth-last-of-type(1) {
       margin-right: 0;
     }
@@ -37,11 +51,11 @@ $dot_active_color: rgba($white, 1);
     // dot
     span {
       display: inline-block;
-      width: $dot_size;
-      height: $dot_size;
       vertical-align: middle;
       background-color: $dot_color;
       @include border_radius(50%);
+      @include media_map(width, $dot_size);
+      @include media_map(height, $dot_size);
       @include transition-property(background);
       @include transition-duration(0.3s);
     }
