--- a/src/static/scss/slider/slider.scss
+++ b/src/static/scss/slider/slider.scss
@@ -33,6 +33,8 @@
   left: -500%;
   top: 0;
   z-index: 5;
+  text-align: center;
+  @include border-box;
 }
 
 .slider-item {
@@ -55,12 +57,5 @@
 
 	.slider-slide ~ .slider-slide {
     display: none;
-  }
-}
-
-
-.slider-root {
-  .slider-item {
-    position: absolute;
   }
 }
