--- a/src/apps_common/gallery/static/gallery/scss/gallery_popup.scss
+++ b/src/apps_common/gallery/static/gallery/scss/gallery_popup.scss
@@ -72,17 +72,19 @@ $close_btn_weight: 2px;
   .slider-root {
     .slider-slide {
       height: 100%;
-      padding: 0 80px;
+      padding: 40px 80px;
       @include valign_after;
       @include media_interval($media480, $media768) {
-        padding: 0 60px;
+        padding: 40px 60px;
       }
       @include media_interval(0, $media480) {
-        padding: 0 50px;
+        padding: 40px 0;
       }
 
       .slider-item {
         position: static;
+        top: 0;
+        left: 0;
         min-width: 0;
         min-height: 0;
         max-width: 100%;
@@ -92,13 +94,52 @@ $close_btn_weight: 2px;
       }
 
       .video-item {
+        position: relative;
         height: 100%;
+        z-index: 1;
         @include valign_after;
 
-        iframe {
+        img {
           max-width: 100%;
           max-height: 100%;
-          vertical-align: middle;
+        }
+
+        .play-btn {
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          width: 10%;
+          min-width: 60px;
+          max-width: 100px;
+          cursor: pointer;
+          @include transform(translate(-50%, -50%));
+
+          &:before {
+            content: '';
+            display: block;
+            padding-bottom: 100%;
+            background: $sprite_url no-repeat rel-background-position(32px, 32px, -254px, -56px);
+            background-size: rel-background-size(32px, 32px);
+          }
+        }
+
+        // в процессе воспроизведения
+        &.playing {
+          img {
+            display: none;
+          }
+
+          .play-btn {
+            display: none;
+          }
+
+          iframe {
+            width: 100%;
+            height: 100%;
+            max-width: 100%;
+            max-height: 100%;
+            vertical-align: middle;
+          }
         }
       };
     }
@@ -106,6 +147,9 @@ $close_btn_weight: 2px;
     .slider-arrow {
       @include opacity(0.4);
       @include transition(opacity 0.2s);
+      @include media_interval(0, $media480) {
+        display: none;
+      }
 
       &:hover {
         @include opacity(1);
