drager events + gmap events fix

--- a/src/apps_common/gallery/static/gallery/scss/gallery_popup.scss
+++ b/src/apps_common/gallery/static/gallery/scss/gallery_popup.scss
@@ -148,6 +148,11 @@ $close_btn_weight: 2px;
 
         // в процессе загрузки
         &.loading {
+          &:before {
+            @include opacity(0);
+            @include transition(opacity 0.3s);
+          }
+
           .play-btn {
             @include opacity(0);
             @include transition(opacity 0.3s);
