--- a/src/apps/contacts/static/contacts/scss/index.scss
+++ b/src/apps/contacts/static/contacts/scss/index.scss
@@ -1,2 +1,46 @@
 @import "mixins";
 
+#google-map {
+  position: relative;
+  z-index: 1;
+
+  .map {
+    height: 500px;
+  }
+
+  .overlay {
+    position: absolute;
+    padding: 20px 0;
+    left: 0;
+    top:0;
+    width: 100%;
+    background: rgba(#000000, 0.5);
+    @include border-box;
+
+    .grid-block {
+      height: 100%;
+    }
+
+    .address-list {
+      @include flexbox;
+      @include justify-content(space-between);
+    }
+
+    .address {
+      padding: 5px;
+      margin-right: 30px;
+      color: $white;
+      cursor: pointer;
+      background: rgba(#FFFF00, 0.1);
+      @include fontsize_default;
+      &:nth-last-child(1) {
+        margin-right: 0;
+      }
+
+      &.active {
+        color: #000;
+        background: rgba(#FFFF00, 0.5);
+      }
+    }
+  }
+}
