--- a/src/apps/main/static/main/scss/index.scss
+++ b/src/apps/main/static/main/scss/index.scss
@@ -25,13 +25,79 @@
 
 #gallery {
 
-  .list {
-    @include flexbox;
-    @include flex-flow(row wrap);
+  .slider-item {
+    margin-right: 20px;
+    cursor: pointer;
+    @include border-box;
+    @include flex-grow(1);
+    @include media_interval($media1024, 0) {
+      // 4 items
+      max-width: calc((100% - 3 * 20px) / 4);
+      &:nth-child(n+4) {
+        margin-right: 0;
+      }
+      &:nth-child(n+5) {
+        display: none;
+      }
+    }
+    @include media_interval($media640, $media1024) {
+      // 3 items
+      max-width: calc((100% - 2 * 20px) / 3);
+      &:nth-child(n+3) {
+        margin-right: 0;
+      }
+      &:nth-child(n+4) {
+        display: none;
+      }
+    }
+    @include media_interval($media400, $media640) {
+      // 2 items
+      max-width: calc((100% - 20px) / 2);
+      &:nth-child(n+2) {
+        margin-right: 0;
+      }
+      &:nth-child(n+3) {
+        display: none;
+      }
+    }
+    @include media_interval(0, $media400) {
+      // 1 item
+      &:nth-child(n+1) {
+        margin-right: 0;
+      }
+      &:nth-child(n+2) {
+        display: none;
+      }
+    }
   }
 
-  .item {
-    margin: 0 20px 20px 0;
-    cursor: pointer;
+  // до загрузки JS
+  .no-slider {
+    @include flexbox;
+  }
+
+  // после загрузки JS
+  .slider-root {
+    .slider-slide {
+      @include flexbox;
+    }
+
+    .slider-arrow {
+      background: rgba(#000, 0.5);
+      @include media_map(width, $grid_paddings);
+      @include media_interval(0, $media640) {
+        display: none;
+      }
+
+      &.slider-arrow-left {
+        left: auto;
+        right: 100%;
+      }
+
+      &.slider-arrow-right {
+        left: 100%;
+        right: auto;
+      }
+    }
   }
 }
