--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -42,16 +42,16 @@
   <div id="gallery" class="block">
     <div class="grid-block">
 
-      <div class="list">
+      <div class="slider no-slider">
         {% for item in config.gallery.items.all %}
           {% if item.is_image %}
-            <div class="item image-item"
+            <div class="slider-item image-item"
                  data-src="{{ item.image.wide.url }}"
                  data-srcset="{{ item.image.wide.srcset }}, {{ item.image.normal.srcset }}, {{ item.image.mobile.srcset }}">
               <img src="{{ item.image.preview.url }}" width="{{ item.image.preview.target_width }}" height="{{ item.image.preview.target_height }}">
             </div>
           {% elif item.is_video_link %}
-            <div class="item video-item"
+            <div class="slider-item video-item"
                  data-provider="{{ item.video.provider.name }}"
                  data-key="{{ item.video.key }}"
                  data-src="{{ item.video_preview.wide.url }}"
