--- a/src/static/scss/mixins/_font_size.scss
+++ b/src/static/scss/mixins/_font_size.scss
@@ -1,14 +1,11 @@
 // http://zerosixthree.se/8-sass-mixins-you-must-have-in-your-toolbox/
-@function calculateRem($size) {
-  $remSize: $size / 16px;
-  @return $remSize * 1rem;
-}
 
 @mixin font-size($size, $line_height:0) {
   font-size: $size;
 
   @if $size != 0 {
-    font-size: calculateRem($size);
+    $remSize: $size / 16px;
+    font-size: $remSize * 1rem;
   }
 
   @if $line_height != 0 {
