--- a/src/templates/admin/login.html
+++ b/src/templates/admin/login.html
@@ -5,7 +5,7 @@
 {% load url from suit_compat %}
 
 {% block extrastyle %}{{ block.super }}
-  <link rel="stylesheet" type="text/css" href="{% static "admin/css/dl_login.css" %}" />
+  <link rel="stylesheet" type="text/css" href="{% static "admin/css/dl_login.css" %}"/>
 {% endblock %}
 
 {% block bodyclass %}login{% endblock %}
@@ -22,60 +22,65 @@
 
 {% block container %}
 
-    {% block content %}
+  {% block content %}
+    {% if form.errors and not form.non_field_errors and not form.this_is_the_login_form.errors %}
+      <p class="errornote alert alert-error">
+        {% blocktrans count counter=form.errors.items|length %}Please correct the error below.{% plural %}Please correct
+          the errors below.{% endblocktrans %}
+      </p>
+    {% endif %}
 
-        {% if form.errors and not form.non_field_errors and not form.this_is_the_login_form.errors %}
-            <p class="errornote alert alert-error">
-                {% blocktrans count counter=form.errors.items|length %}Please correct the error below.{% plural %}Please correct the errors below.{% endblocktrans %}
-            </p>
-        {% endif %}
+    {% if form.non_field_errors or form.this_is_the_login_form.errors %}
+      {% if form.this_is_the_login_form.errors %}
+        {% for error in form.non_field_errors|add:form.this_is_the_login_form.errors %}
+          <p class="errornote alert alert-error">
+            {{ error }}
+          </p>
+        {% endfor %}
+      {% else %}
+        {% for error in form.non_field_errors %}
+          <p class="errornote alert alert-error">
+            {{ error }}
+          </p>
+        {% endfor %}
+      {% endif %}
+    {% endif %}
 
-        {% if form.non_field_errors or form.this_is_the_login_form.errors %}
-            {% if form.this_is_the_login_form.errors %}
-                {% for error in form.non_field_errors|add:form.this_is_the_login_form.errors %}
-                    <p class="errornote alert alert-error">
-                        {{ error }}
-                    </p>
-                {% endfor %}
-            {% else %}
-                {% for error in form.non_field_errors %}
-                    <p class="errornote alert alert-error">
-                        {{ error }}
-                    </p>
-                {% endfor %}
-            {% endif %}
-        {% endif %}
+    <div id="content-main">
+      <h1><i class="icon-lock icon-white"></i> {{ 'ADMIN_NAME'|suit_conf }}</h1>
 
-        <div id="content-main">
-            <h1><i class="icon-lock icon-white"></i> {{ 'ADMIN_NAME'|suit_conf }}</h1>
-
-            <form action="{{ app_path }}" method="post" id="login-form"><div class="hide">{% csrf_token %}</div>
-                <div class="form-row control-group{% if not form.this_is_the_login_form.errors and form.username.errors %} error{% endif %}">
-                    <label for="id_username" class="control-label required">{{ form.username.label }}:</label> {{ form.username }}
-                  {% if not form.this_is_the_login_form.errors and form.username.errors %}<div class="help-block">{{ form.username.errors }}</div>{% endif %}
-                </div>
-                <div class="form-row control-group{% if not form.this_is_the_login_form.errors and form.password.errors %} error{% endif %}">
-                    <label for="id_password" class="control-label required">{% trans 'Password' %}:</label> {{ form.password }}
-                  {% if not form.this_is_the_login_form.errors and form.password.errors %}<div class="help-block">{{ form.password.errors }}</div>{% endif %}
-                    <input type="hidden" name="this_is_the_login_form" value="1"/>
-                    <input type="hidden" name="next" value="{{ next }}"/>
-                </div>
-                {% url 'admin_password_reset' as password_reset_url %}
-                {% if password_reset_url %}
-                    <div class="password-reset-link">
-                        <a href="{{ password_reset_url }}">{% trans 'Forgotten your password or username?' %}</a>
-                    </div>
-                {% endif %}
-                <div class="submit-row">
-                    <input type="submit" value="{% trans 'Log in' %}" class="btn btn-info"/>
-                </div>
-            </form>
-
-            <script type="text/javascript">
-                document.getElementById('id_username').focus()
-            </script>
+      <form action="{{ app_path }}" method="post" id="login-form">
+        <div class="hide">{% csrf_token %}</div>
+        <div class="form-row control-group{% if not form.this_is_the_login_form.errors and form.username.errors %} error{% endif %}">
+          <label for="id_username" class="control-label required">{{ form.username.label }}:</label> {{ form.username }}
+          {% if not form.this_is_the_login_form.errors and form.username.errors %}
+            <div class="help-block">{{ form.username.errors }}</div>{% endif %}
         </div>
+        <div class="form-row control-group{% if not form.this_is_the_login_form.errors and form.password.errors %} error{% endif %}">
+          <label for="id_password" class="control-label required">{% trans 'Password' %}:</label> {{ form.password }}
+          {% if not form.this_is_the_login_form.errors and form.password.errors %}
+            <div class="help-block">{{ form.password.errors }}</div>{% endif %}
+          <input type="hidden" name="this_is_the_login_form" value="1"/>
+          <input type="hidden" name="next" value="{{ next }}"/>
+        </div>
+        {% url 'admin_password_reset' as password_reset_url %}
+        {% if password_reset_url %}
+          <div class="password-reset-link">
+            <a href="{{ password_reset_url }}">{% trans 'Forgotten your password or username?' %}</a>
+          </div>
+        {% endif %}
+        <div class="submit-row">
+          <input type="submit" value="{% trans 'Log in' %}" class="btn btn-info"/>
+        </div>
+      </form>
 
-      <script src="{% static "admin/js/dl_login.js" %}"></script>
-    {% endblock %}
+      <script type="text/javascript">
+        document.getElementById('id_username').focus()
+      </script>
+    </div>
+  {% endblock %}
+{% endblock %}
+
+{% block extrajs %}
+  <script src="{% static "admin/js/dl_login.js" %}"></script>
 {% endblock %}
